<resources>
    <string name="app_name">CATcha</string>
    <string name="kitchen">кухня</string>
    <string name="play">улица</string>
    <string name="bath">ванная</string>
    <string name="sleep">спальня</string>
    <string name="info">инфа</string>
    <string name="breed_info_message">инфа о породе</string>
    <string name="breed_info_title">Порода</string>
    <string name="breed1">уличная</string>
    <string name="breed2">русская голубая</string>
    <string name="breed3">шотландская вислоухая</string>
    <string name="breed1_info">Беспородные кошки бывают самых разных цветов, размеров и форм.
        Чаще всего среди беспородных кошек встречаются полосатые особи. Обычно этот окрас называют «деревенский».
        Чаще всего они спокойны, благодарны, живо отвечают на ласки хозяина.
        Многие инфекции, с которыми кошки столкнулись во время бродячей жизни и каким-то чудом пережили их, уже не страшны им;
        их здоровье несколько крепче чистокровных собратьев, поэтому и продолжительность жизни больше.
    </string>
    <string name="breed2_info">Представители этой породы имеют средний размер и достаточно мускулистое вытянутое тело.
        При этом лапы у них прямые и длинные, с розово-лиловыми подушечками, а хвост тонкий и вытянутый.
        Череп русской голубой кошки удлиненный, мордочка плоская с прямым носом.
        Уши у нее большие, заостренные и наклонены немного вперед. \n
        Отличаются "аристократическими" манерами и тактом, обладают спокойным нравом и интеллигентностью.
        Животные в меру ласковы и покладисты, но при этом могут быть независимыми, и не станут что-то делать по принуждению.
        Они не мстительны, а также не склонны к намеренному вредительству.
        Русская голубая спокойной переносит одиночество и неплохо ладит с детьми — терпит шалости,
        не теряя самообладания и не выпуская когти. Несмотря на это, лучше не оставлять ее и маленького ребенка без присмотра.
    </string>
    <string name="breed3_info">Мягкость и округлость форм – главные общие характеристики внешнего вида шотландской вислоухой кошки.
        Все линии тела обязательно должны быть плавными – никаких острых углов.
        Даже кончики лап у этих кошек маленькие, круглые и аккуратные.
        Голову шотландских вислоухих часто сравнивают с совиной: она тоже должна быть правильной круглой формы.
        Щеки у шотландцев пухлые и весьма заметные, нос небольшой, глаза большие и круглые.
        Из-за этого кошки всегда смотрят будто бы слегка с удивлением.
        А цвет глаз питомца должен соответствовать окрасу его шерсти. \n
        Помимо умилительной внешности у шотландской вислоухой кошки еще и замечательный характер.
        Изначально они выводились исключительно как домашние кошки, поэтому получились спокойные и ласковые любимцы,
        которые очень ценят уют и удобства. Им будем вполне комфортно в городской квартире.
        Да и хозяева не устанут от чрезмерно энергичной кошки. Шотландская вислоухая не станет устраивать
        бешеные скачки по комнатам, бегая по столам, шкафам и стенам, но зато время от времени не откажется побегать за бантиком.
    </string>
    <string name="advice">совет</string>
    <string name="red">красный</string>
    <string name="green">зеленый</string>
    <string name="blue">синий</string>
    <string name="choose_color">Выбери цвет фона</string>
    <string name="bath_advice">По своей природе кошки очень чистоплотны.
        Но, так или иначе, периодически хозяину следует мыть своего питомца, особенно если он бывает на улице.
        Частое мытье смывает защитный барьер, и кожа животного может стать более чувствительной.
        Домашнего кота рекомендуется мыть в среднем раз в три месяца, уличного - раз в 4-6 недель.
        Исключение составляют те случаи, когда шерсть животного сильно загрязнена или у него завелись паразиты.
        Следует запланировать купание на время, когда кошка устала и расслабилась.
        Например, после долгой игры – так у нее будет меньше сил на сопротивление.
        Заранее подготовьте все необходимое для мытья – шампунь (специальный для кошек), полотенце, расческу, емкости.
        В помещении ванной комнаты должно быть тепло, примерно 22-24 градуса.
        Также подготовьте теплое место, где вы сможете высушить кота
        (для этого сначала заверните питомца в сухое полотенце, а потом можно использовать фен на самых низких оборотах)
        Если животное боится вида льющейся воды, заранее наберите ее в большой таз,
        аккуратно поливайте животное, постепенно смывая пену.
        Рекомендуется гладить кошку в процессе обливания, равномерно распределяя воду по шерсти.
        Вода должна быть немного теплой, но не горячей.
        Можно разговаривать с животным в процессе спокойным, доброжелательным голосом.
        Это поможет ему немного расслабиться.
    </string>
    <string name="kitchen_advice"> Что учесть при выборе корма: \n
        - возраст животного — котятам нужна более калорийная пища, а стареющим кошкам требуется больше клетчатки; \n
        - индивидуальные потребности — свободный выгул животного, избыточная масса тела, беременность; \n
        - патологии — например, при мочекаменной болезни и почечной недостаточности нужен диетический корм. \n
        Сухой и полусухой корм: \n
        Удобнее всего для владельцев, которые кормят питомцев по свободному графику:
        если утром насыпать в миску сухой корм, он до вечера останется свежей и вкусной.
        Это подходящий вариант и для случаев, когда вам нужно уехать на 1–2 дня и оставить кошку одну.
        Основной его недостаток — в нём практически отсутствует влага, поэтому у животного всегда должна быть
        свежая вода в миске, автопоилке или питьевом фонтанчике. \n
        Влажный корм: \n
        Подойдёт больным и выздоравливающим кошкам, а также старым животным, которым трудно жевать гранулы-сухарики.
        В этом корме достаточно жидкости, поэтому коты очень мало пьют.
        Главный минус —  быстро портится. Если кошка не съела порцию сразу, через полчаса продукт заветривается,
        а к вечеру засыхает. \n
        Эксперты считают, что допустимо давать кошке сразу и «сушку», и консервы. Но важно не смешивать
        разные виды корма в одной миске и выбирать корма одного производителя.
        Продукты разных фирм смешивают, только чтобы перевести кошку с одного вида на другой.

    </string>
    <string name="sleep_advice">Здоровый сон взрослого кота должен быть продолжительным, не менее 14-16 часов в сутки.
        Котята спят больше, чем взрослые питомцы. \n
        Питомец будет хорошо спать, если другие его потребности покрыты.
        Чтобы хорошо спать питомцу нужно подходящее постоянное место, где он будет чувствовать себя в безопасности.
        Также кот должен быть сыт и здоров. \n
        Для ночного хищника активность в темное время суток – норма.
        Но если кот не дает спать по ночам, нужно думать, что с этим делать.
        Перестроить режим дня кота реально, нужно постепенно увеличивать уровень активности в дневное время.
        Если животное будет тратить много энергии днем, то ночью гарантировано сможет крепко спать. \n
        Тревожный сигнал – кот прячется под диван, в шкаф или еще куда-то в недоступное для людей место, и долго спит.
        Это признак сильного стресса или заболевания.
    </string>
    <string name="mouse">Пойманных мышей:</string>
    <string name="learning">Обучение</string>
    <string name="settings">Настройки</string>
    <string name="catalog">Каталог</string>
    <string name="start">Начать</string>
    <string name="care_points">Очки заботы:</string>
    <string name="number_of_cats">Число доступных котов:</string>
    <string name="title1">Хотите забрать кота к себе?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="title2">У вас недостаточно очков заботы</string>
    <string name="ok">Ок</string>
    <string name="on">Включить звук</string>
    <string name="off">Выключить звук</string>
    <string name="change_language">English</string>
    <string name="buy">Хотите купить продукт?</string>
    <string name="cp">ОЗ:</string>
    <string name="age">Возраст:</string>
    <string name="breed">Порода:</string>
    <string name="learning_text">Добро пожаловать в CATcha! Это текст-обучение поможет вам разобраться с основами игры и научиться ухаживать за своим виртуальным питомцем.\n
        Нажав кнопку «Начать» в стартовом меню, вы можете перейти к самой игре.\n
        В настройках вы можете установить цвет фона и включить/выключить музыку.\n
        Сначала у вас будет один уличный кот и ваша задача - заботиться о нем.
        У вас будет доступ к различным функциям и возможностям, чтобы удовлетворить потребности вашего питомца.
        Есть четыре шкалы, отслеживающие состояние кота: его сытость, радость, бодрость и чистоту.
        Показатели на них будут уменьшаться со временем, и, чтобы не расстраивать кота, вы должны следить за ними и
        повышать их. Для этого заходите в соответствующий раздел и выполняйте следующие действия:\n
        В кухне вы можете купить новые продукты и покормить кота;\n
        На улице – помогите коту поймать мышей;\n
        В спальне – выключите свет, дайте коту отдохнуть и восстановить энергию;\n
        В ванной – вымойте кота;\n
        В каждом разделе, нажав на иконку вопроса снизу, вы можете получить совет и узнать немного больше об уходе за котами.
        Иконка вопроса сверху (рядом с кнопкой «Домой») позволит вам получить больше информации о породе вашего питомца.\n
        За всё это вы можете повысить показатели шкал и получить очки заботы (если значения характеристик меньше 100).
        Очки заботы – игровая валюта, позволяющие вам покупать вкусную еду для кота, а также открывать новые породы
        – это можно сделать в каталоге.\n
        Наслаждайтесь игрой и создайте особенные моменты с вашими питомцами!
        Они станут вашими верными друзьями и позволят вам испытать радость заботы о них.\n
        Удачи!
</string>
    <string name="fish">рыба</string>
    <string name="sausage">колбаса</string>
    <string name="milk">молоко</string>
    <string name="catjelly">желе</string>
    <string name="surprise">сюрприз</string>
    <string name="busy">ваш котик уже занят прямо сейчас</string>
</resources>
