<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/start_fragment"
    tools:context=".start.StartFragment">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="158dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/accent"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_help"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:text="@string/learning"
        android:textAllCaps="false"
        android:textColor="@color/accent"
        app:layout_constraintBottom_toTopOf="@+id/btn_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_catalog"
        android:background="@drawable/background_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_settings"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/accent"
        android:background="@drawable/background_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_help" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_catalog"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:text="@string/catalog"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/accent"
        app:layout_constraintTop_toBottomOf="@+id/btn_to_game"
        android:background="@drawable/background_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_game"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/btn_catalog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:textAllCaps="false"
        android:textColor="@color/accent"
        android:background="@drawable/background_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
