<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btn_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_choose_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_choose_color"
        android:text="@string/choose_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_sound"
        app:layout_constraintEnd_toEndOf="@id/sb_red"
        app:layout_constraintStart_toStartOf="@id/sb_red"
        app:layout_constraintBottom_toTopOf="@id/tv_red"/>

    <TextView
        android:id="@+id/tv_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_color"
        app:layout_constraintEnd_toEndOf="@id/sb_red"
        app:layout_constraintStart_toStartOf="@id/sb_red"
        app:layout_constraintBottom_toTopOf="@id/sb_red"/>

    <SeekBar
        android:id="@+id/sb_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_green"
        android:min="0"
        android:max="255"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"/>

    <TextView
        android:id="@+id/tv_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/sb_red"
        app:layout_constraintEnd_toEndOf="@id/sb_green"
        app:layout_constraintBottom_toTopOf="@id/sb_green"
        app:layout_constraintStart_toStartOf="@id/sb_green"/>

    <SeekBar
        android:id="@+id/sb_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:min="0"
        android:max="255"
        app:layout_constraintTop_toBottomOf="@id/tv_green"
        app:layout_constraintEnd_toEndOf="@id/sb_red"
        app:layout_constraintBottom_toTopOf="@id/tv_blue"
        app:layout_constraintStart_toStartOf="@id/sb_red"
        android:layout_marginVertical="16dp"/>

    <TextView
        android:id="@+id/tv_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/sb_green"
        app:layout_constraintEnd_toEndOf="@id/sb_blue"
        app:layout_constraintBottom_toTopOf="@id/sb_blue"
        app:layout_constraintStart_toStartOf="@id/sb_blue"/>

    <SeekBar
        android:id="@+id/sb_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:min="0"
        android:max="255"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_blue"
        app:layout_constraintBottom_toTopOf="@id/cv_color"
        app:layout_constraintStart_toStartOf="@id/sb_green"
        app:layout_constraintEnd_toEndOf="@id/sb_green"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_color"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintTop_toBottomOf="@id/sb_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="128dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/black">

        <View
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:background="@color/white" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
